# GameOfLife

./: .gitignore  CMakeLists.txt  README.md
Code/Headers/: CellCanvas.h  Game.h  OpenCLFunctions.h
Code/Sources/: CellCanvas.cpp  Game.cpp  OpenCLFunctions.cpp  main.cpp
Resources/Kernels/: cell.txt
